<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roonner</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="ok">OK, let\'s do this!</string>
    
    <!-- Inicio -->
	<string name="welcome">Hi Cristobal!</string>
	<string name="how_much">How much do you want to run?</string>
	<string name="how_long">How long do you want to run?</string>
	<string name="or">or</string>

	
	<!-- Buddies -->
	<string name="new_roonner">Find a new runner</string>
	<string name="my_buddies">My Buddies</string>
	<string name="options">Options</string>
	<string name="roon">Want to Roon?</string>
	<string name="next">Next please!</string>
	<string name="solo">Run solo</string>
	<string name="buddies_speech">I can help you find a \nnew runner!</string>
	<string name="more_roonners">I can find you more!</string>

	<string name="skip">Skip</string>
	<string name="music">Music</string>
	<string name="run">Run</string>
	<string name="finish">Finish</string>
	<string name="your_friends">Your Friend</string>
	<string name="encourage">Encourage your buddy!</string>

</resources>