<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/how_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/how_much"
        android:layout_below="@+id/Or"
        android:layout_marginTop="28dp"
        android:text="@string/how_long" />

    <TextView
        android:id="@+id/Or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/how_much"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/or"
        android:textSize="20sp" />

    <Button
        android:id="@+id/how_much"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/how_much" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_above="@+id/how_much"
        android:layout_alignLeft="@+id/Or"
        android:layout_marginBottom="66dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/main_roonner"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignBottom="@+id/welcome2"
        android:layout_alignLeft="@+id/how_much"
        android:contentDescription="@string/content_description"
        android:src="@drawable/roon_icon" />

</RelativeLayout>